refactor(resource): make resource service domain-oriented