@@ -1,12 +1,14 @@
 package io.yak.ops.business.resource.service.impl;
 
-import com.baomidou.mybatisplus.core.metadata.IPage;
 import io.yak.framework.common.PagingData;
 import io.yak.ops.business.resource.config.ConditionalOnResourceEnabled;
-import io.yak.ops.business.resource.dao.ResourceDao;
+import io.yak.ops.business.resource.domain.ResourceDownload;
+import io.yak.ops.business.resource.domain.ResourceNode;
+import io.yak.ops.business.resource.domain.ResourcePage;
 import io.yak.ops.business.resource.exception.ResourceException;
-import io.yak.ops.business.resource.model.ResourceDownload;
+import io.yak.ops.business.resource.repository.ResourceRepository;
 import io.yak.ops.business.resource.service.ResourceService;
+import io.yak.ops.business.resource.service.support.ResourceViewMapper;
 import io.yak.ops.business.resource.storage.StorageOperatorRegistry;
 import io.yak.ops.business.resource.util.ResourcePathUtils;
 import io.yak.ops.common.bean.dto.resource.ResourceContentUpdateDTO;
@@ -15,7 +17,6 @@ import io.yak.ops.common.bean.dto.resource.ResourceCreateDirectoryDTO;
 import io.yak.ops.common.bean.dto.resource.ResourceMoveDTO;
 import io.yak.ops.common.bean.dto.resource.ResourceQueryDTO;
 import io.yak.ops.common.bean.dto.resource.ResourceUpdateDTO;
-import io.yak.ops.common.bean.po.resource.ResourcePO;
 import io.yak.ops.common.bean.vo.resource.ResourceContentVO;
 import io.yak.ops.common.bean.vo.resource.ResourceStoragePluginVO;
 import io.yak.ops.common.bean.vo.resource.ResourceVO;
@@ -28,24 +29,24 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
-/** 资源管理服务实现。目录元数据由数据库维护，文件内容由存储插件负责。 */
+/** 资源管理服务实现。目录元数据由 Repository 管理，文件内容由存储插件负责。 */
 @Slf4j
 @Service
 @ConditionalOnResourceEnabled
 @RequiredArgsConstructor
 public class ResourceServiceImpl implements ResourceService {
 
-  private final ResourceDao resourceDao;
+  private final ResourceRepository repository;
   private final StorageOperatorRegistry storageRegistry;
   private final ResourceServiceSupport support;
   private final ResourceFileOperations fileOperations;
+  private final ResourceViewMapper viewMapper;
 
   @Override
   @Transactional(transactionManager = "opsResourceTransactionManager", rollbackFor = Exception.class)
@@ -62,21 +63,22 @@ public class ResourceServiceImpl implements ResourceService {
 
     support.storageRun(() -> operator.createDirectory(storagePath));
     try {
-      ResourcePO resource = support.newResource(
-          parent.id,
-          name,
-          fullPath,
-          ResourceNodeType.DIRECTORY,
-          parent.storageType,
-          storagePath,
-          null,
-          null,
-          0L,
-          null,
-          requestDTO.getDescription());
+      ResourceNode resource =
+          support.newResource(
+              parent.id,
+              name,
+              fullPath,
+              ResourceNodeType.DIRECTORY,
+              parent.storageType,
+              storagePath,
+              null,
+              null,
+              0L,
+              null,
+              requestDTO.getDescription());
       support.insert(resource);
       support.dispatch(resource, ResourceFileSyncAction.CREATED, null);
-      return support.toVO(resource);
+      return viewMapper.node(resource);
     } catch (RuntimeException exception) {
       support.cleanupCreatedObject(operator, storagePath, true);
       throw exception;
@@ -90,47 +92,54 @@ public class ResourceServiceImpl implements ResourceService {
       String name,
       String description,
       MultipartFile file) {
-    return fileOperations.upload(parentId, name, description, file);
+    return viewMapper.node(fileOperations.upload(parentId, name, description, file));
   }
 
   @Override
   @Transactional(transactionManager = "opsResourceTransactionManager", rollbackFor = Exception.class)
   public ResourceVO createContent(ResourceCreateContentDTO requestDTO) {
-    return fileOperations.createContent(requestDTO);
+    if (requestDTO == null) {
+      throw new ResourceException(ResourceErrorCode.INVALID_NAME, "在线创建参数不能为空");
+    }
+    return viewMapper.node(
+        fileOperations.createContent(
+            requestDTO.getParentId(),
+            requestDTO.getName(),
+            requestDTO.getDescription(),
+            requestDTO.getContentType(),
+            requestDTO.getContent()));
   }
 
   @Override
   public ResourceVO get(Long id) {
-    return support.toVO(support.require(id));
+    return viewMapper.node(support.require(id));
   }
 
   @Override
   public List<ResourceVO> list(Long parentId, String keyword) {
-    return resourceDao.selectChildren(
-            support.normalizeParentId(parentId), support.trimToNull(keyword)).stream()
-        .map(support::toVO)
-        .collect(Collectors.toList());
+    return repository
+        .findChildren(support.normalizeParentId(parentId), support.trimToNull(keyword))
+        .stream()
+        .map(viewMapper::node)
+        .toList();
   }
 
   @Override
   public PagingData<ResourceVO> page(ResourceQueryDTO queryDTO) {
-    ResourceQueryDTO normalized = support.normalizeQuery(queryDTO);
-    IPage<ResourcePO> page = resourceDao.selectPage(normalized);
-    List<ResourceVO> records = page.getRecords().stream()
-        .map(support::toVO)
-        .collect(Collectors.toList());
-    return new PagingData<>(records, page);
+    ResourcePage<ResourceNode> page = repository.page(support.normalizeQuery(queryDTO));
+    List<ResourceVO> records = page.records().stream().map(viewMapper::node).toList();
+    return pagingData(records, page);
   }
 
   @Override
   public List<ResourceVO> tree() {
-    List<ResourcePO> resources = resourceDao.selectAll();
+    List<ResourceNode> resources = repository.findAll();
     Map<Long, ResourceVO> mapped = new HashMap<>();
-    for (ResourcePO resource : resources) {
-      mapped.put(resource.getId(), support.toVO(resource));
+    for (ResourceNode resource : resources) {
+      mapped.put(resource.getId(), viewMapper.node(resource));
     }
     List<ResourceVO> roots = new ArrayList<>();
-    for (ResourcePO resource : resources) {
+    for (ResourceNode resource : resources) {
       ResourceVO current = mapped.get(resource.getId());
       if (resource.getParentId() == null || resource.getParentId() == 0L) {
         roots.add(current);
@@ -152,7 +161,7 @@ public class ResourceServiceImpl implements ResourceService {
     if (requestDTO == null) {
       throw new ResourceException(ResourceErrorCode.INVALID_NAME, "更新资源参数不能为空");
     }
-    ResourcePO resource = support.require(id);
+    ResourceNode resource = support.require(id);
     String name = ResourcePathUtils.normalizeName(requestDTO.getName());
     support.ensureNameAvailable(resource.getParentId(), name, resource.getId());
     String oldFullPath = resource.getFullPath();
@@ -161,28 +170,31 @@ public class ResourceServiceImpl implements ResourceService {
     }
     resource.setDescription(support.trimToNull(requestDTO.getDescription()));
     resource.setUpdateTime(LocalDateTime.now());
-    if (!resourceDao.update(resource)) {
+    if (!repository.update(resource)) {
       throw new ResourceException(ResourceErrorCode.UPDATE_FAILED);
     }
     support.dispatch(resource, ResourceFileSyncAction.UPDATED, oldFullPath);
-    return support.toVO(resource);
+    return viewMapper.node(resource);
   }
 
   @Override
   @Transactional(transactionManager = "opsResourceTransactionManager", rollbackFor = Exception.class)
   public ResourceVO replaceFile(Long id, MultipartFile file) {
-    return fileOperations.replaceFile(id, file);
+    return viewMapper.node(fileOperations.replaceFile(id, file));
   }
 
   @Override
   @Transactional(transactionManager = "opsResourceTransactionManager", rollbackFor = Exception.class)
   public ResourceContentVO updateContent(Long id, ResourceContentUpdateDTO requestDTO) {
-    return fileOperations.updateContent(id, requestDTO);
+    if (requestDTO == null) {
+      throw new ResourceException(ResourceErrorCode.CONTENT_NOT_EDITABLE, "文件内容不能为空");
+    }
+    return viewMapper.content(fileOperations.updateContent(id, requestDTO.getContent()));
   }
 
   @Override
   public ResourceContentVO getContent(Long id, int skipLineNum, int limit) {
-    return fileOperations.getContent(id, skipLineNum, limit);
+    return viewMapper.content(fileOperations.getContent(id, skipLineNum, limit));
   }
 
   @Override
@@ -191,40 +203,42 @@ public class ResourceServiceImpl implements ResourceService {
     if (requestDTO == null || requestDTO.getTargetParentId() == null) {
       throw new ResourceException(ResourceErrorCode.INVALID_MOVE_TARGET, "目标目录不能为空");
     }
-    ResourcePO resource = support.require(id);
-    ResourceServiceSupport.ParentContext targetParent =
-        support.parent(requestDTO.getTargetParentId());
+    ResourceNode resource = support.require(id);
+    ResourceServiceSupport.ParentContext targetParent = support.parent(requestDTO.getTargetParentId());
     support.ensureNameAvailable(targetParent.id, resource.getName(), resource.getId());
     String oldFullPath = resource.getFullPath();
     support.relocate(resource, targetParent, resource.getName());
     support.dispatch(resource, ResourceFileSyncAction.MOVED, oldFullPath);
-    return support.toVO(resource);
+    return viewMapper.node(resource);
   }
 
   @Override
   @Transactional(transactionManager = "opsResourceTransactionManager", rollbackFor = Exception.class)
   public boolean delete(Long id) {
-    ResourcePO resource = support.require(id);
-    List<ResourcePO> descendants = resourceDao.selectDescendants(resource.getFullPath());
+    ResourceNode resource = support.require(id);
+    List<ResourceNode> descendants = repository.findDescendants(resource.getFullPath());
     List<Long> ids = new ArrayList<>(descendants.size() + 1);
     ids.add(resource.getId());
-    for (ResourcePO descendant : descendants) {
+    for (ResourceNode descendant : descendants) {
       ids.add(descendant.getId());
     }
-    if (!resourceDao.deleteBatch(ids)) {
+    if (!repository.deleteBatch(ids)) {
       throw new ResourceException(ResourceErrorCode.DELETE_FAILED);
     }
     StorageOperator operator = storageRegistry.require(resource.getStorageType());
-    support.runAfterCommit(() -> {
-      try {
-        operator.delete(
-            resource.getStoragePath(),
-            resource.getNodeType() == ResourceNodeType.DIRECTORY);
-      } catch (RuntimeException exception) {
-        log.error("Failed to remove resource object after metadata deletion: {}",
-            resource.getStoragePath(), exception);
-      }
-    });
+    support.runAfterCommit(
+        () -> {
+          try {
+            operator.delete(
+                resource.getStoragePath(),
+                resource.getNodeType() == ResourceNodeType.DIRECTORY);
+          } catch (RuntimeException exception) {
+            log.error(
+                "Failed to remove resource object after metadata deletion: {}",
+                resource.getStoragePath(),
+                exception);
+          }
+        });
     support.dispatch(resource, ResourceFileSyncAction.DELETED, resource.getFullPath());
     return true;
   }
@@ -236,6 +250,21 @@ public class ResourceServiceImpl implements ResourceService {
 
   @Override
   public List<ResourceStoragePluginVO> storagePlugins() {
-    return storageRegistry.list();
+    return storageRegistry.list().stream().map(viewMapper::storagePlugin).toList();
+  }
+
+  private PagingData<ResourceVO> pagingData(
+      List<ResourceVO> records,
+      ResourcePage<ResourceNode> page) {
+    PagingData<ResourceVO> result = new PagingData<>();
+    result.setBizData(records);
+    result.setPagination(
+        PagingData.Pagination.builder()
+            .total(page.total())
+            .pages(page.pages())
+            .pageNo(page.pageNo())
+            .pageSize(page.pageSize())
+            .build());
+    return result;
   }
 }
